cambio img en el index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="imagenes/Logo.png" alt="logo principal Alura">
+        <img class="logo" src="img/Logo.png" alt="logo principal Alura">
     </header>
     <main>
         <section>
@@ -26,7 +26,7 @@
         <section class="right">
             <div class="contenedor">
                 <div class="salida">
-                    <img src="imagenes/Muñeco.png" alt="Muñeco" class="munheco">
+                    <img src="img/muheco.png" alt="Muñeco" class="munheco">
                     <div class="etiqueta_texto">Ningún mensaje fue encontrado</div>
                     <div class="etiqueta_texto2">Ingresa el texto que desees encriptar o desencriptar.</div>
                 </div>
